feat: init kong gateway
